fixes + possibly disabled cache

--- a/OnlyBooks/templates/main.html
+++ b/OnlyBooks/templates/main.html
@@ -39,7 +39,7 @@
             <h1>Only Books</h1>
             <ul>
                 <li><a href="{% url 'landing-page' %}">Categories</a></li>
-                <li><a href="#recommendations">Recommendations</a></li>
+                <li><a href="{% url 'landing-page' %}#recommendations">Recommendations</a></li>
                 <li><a href="{% url 'about' %}">About Us</a></li>
             </ul>
             <button class="login-btn" onclick="toggleModal()">Login / Sign Up</button>
