--- a/OnlyBooks/static/styles/about.css
+++ b/OnlyBooks/static/styles/about.css
@@ -15,11 +15,16 @@ main {
 main > div {
     background-color: #fff;
     color: #000;
-    padding: 2rem 1rem;B
+    padding: 2rem 1rem;
     border-radius: 1rem;
     z-index: 20;
     display: flex;
     flex-direction: column;
+    transition: all ease-out 300ms;
+}
+main > div:hover {
+    background-color: #f4a261;
+    transform: scale(110%);
 }
 main > div >  div {
     font-size: 2rem;
