--- a/OnlyBooks/static/styles/main.css
+++ b/OnlyBooks/static/styles/main.css
@@ -1,5 +1,11 @@
-/* Global Styles */
 header {
+    background: linear-gradient(to right, #3b2e8e, #f4a261); /* Dark blue to soft orange */
+    color: white;
+    padding: 20px 0;
+    position: relative;
+}
+
+body {
     background: linear-gradient(to right, #3b2e8e, #f4a261); /* Dark blue to soft orange */
     color: white;
     padding: 20px 0;
@@ -90,7 +96,7 @@ header {
     font-size: 1em;
 }
 body {
-    font-family: 'Comfortaa', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
