--- a/OnlyBooks/templates/main.html
+++ b/OnlyBooks/templates/main.html
@@ -45,8 +45,8 @@
             <button class="login-btn" onclick="toggleModal()">Login / Sign Up</button>
         </nav>
         <div class="hero">
-            <h2>Discover Your Next Favorite Book</h2>
-            <p>Browse thousands of books, curated collections, and personalized recommendations.</p>
+            <h2>Discover Your Next Favorite {% if page == 'events' %} Event {% else %} Book {% endif %}</h2>
+            <p>Browse {% if page == 'events' %} hundreds of events {% else %} thousands of books {% endif %}, curated collections, and personalized recommendations.</p>
             {% if page == 'landing-page' %}
                 <input aria-label="Search Term" type="text" placeholder="Search for books, authors, genres...">
                 <button onclick="searchBooks()">Shop Now</button>
