--- a/OnlyBooks/templates/main.html
+++ b/OnlyBooks/templates/main.html
@@ -15,10 +15,10 @@
     <!-- Modal for Login/Signup -->
     <div id="loginModal" class="modal">
         <div class="modal-content">
-            <div class="cross-padder">
-                <div></div>
-                <span class="iconoir-xmark" onclick="toggleModal()"></span>
-            </div>
+{#            <div class="cross-padder">#}
+{#                <div></div>#}
+{#                <span class="iconoir-xmark" onclick="toggleModal()"></span>#}
+{#            </div>#}
             <form id="loginForm">
                 <h2>Login</h2>
                 <input type="text" placeholder="Email" required>
