--- a/OnlyBooks/app/templates/app/about.html
+++ b/OnlyBooks/app/templates/app/about.html
@@ -6,46 +6,49 @@
 {% block content %}
     <main>
         <div>
-            <div>Aargh Rai</div>
-            <div class="connections">
-                <a href="https://github.com/FloatingComet62">
-                    <i class="iconoir-github"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/aargh-rai-40900524a/">
-                    <i class="iconoir-linkedin"></i>
-                </a>
-            </div>
-
-        </div>
-        <div>
-            <div>Ojesh Srivastav</div>
-            <div class="connections">
-                <a href="https://github.com/OJSri">
-                    <i class="iconoir-github"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/ojesh-srivastav-a28069164/">
-                    <i class="iconoir-linkedin"></i>
-                </a>
-            </div>
-        </div>
-        <div>
+            <div class="big">D</div>
             <div>Dhruv Srivastava</div>
             <div class="connections">
-                <a href="https://github.com/ChaoticNebula5">
+                <a href="https://github.com/ChaoticNebula5" target="_blank">
                     <i class="iconoir-github"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/dhruv-srivastava-055ab232a/">
+                <a href="https://www.linkedin.com/in/dhruv-srivastava-055ab232a/" target="_blank">
                     <i class="iconoir-linkedin"></i>
                 </a>
             </div>
         </div>
         <div>
-            <div>Rohit Singhal</div>
+            <div class="big">O</div>
+            <div>Ojesh Srivastav</div>
             <div class="connections">
-                <a href="https://github.com/rohitsinghal123">
+                <a href="https://github.com/OJSri" target="_blank">
                     <i class="iconoir-github"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/rohit-singhal-580682267/">
+                <a href="https://www.linkedin.com/in/ojesh-srivastav-a28069164/" target="_blank">
+                    <i class="iconoir-linkedin"></i>
+                </a>
+            </div>
+        </div>
+        <div>
+            <div class="big">R</div>
+            <div>Rohit Singhal</div>
+            <div class="connections">
+                <a href="https://github.com/rohiisinghal" target="_blank">
+                    <i class="iconoir-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/rohit-singhal-580682267/" target="_blank">
+                    <i class="iconoir-linkedin"></i>
+                </a>
+            </div>
+        </div>
+        <div>
+            <div class="big">A</div>
+            <div>Aargh Rai</div>
+            <div class="connections">
+                <a href="https://github.com/FloatingComet62" target="_blank">
+                    <i class="iconoir-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/aargh-rai-40900524a/" target="_blank">
                     <i class="iconoir-linkedin"></i>
                 </a>
             </div>
