--- a/OnlyBooks/templates/main.html
+++ b/OnlyBooks/templates/main.html
@@ -34,6 +34,7 @@
             <nav class="navbar">
                 <h1>Only Books</h1>
                 <ul>
+                    <li><a href="{% url 'events' %}">Events</a></li>
                     <li><a href="{% url 'landing-page' %}">Categories</a></li>
                     <li><a href="{% url 'landing-page' %}#recommendations">Recommendations</a></li>
                     <li><a href="{% url 'about' %}">About Us</a></li>
