--- a/OnlyBooks/app/templates/app/profile.html
+++ b/OnlyBooks/app/templates/app/profile.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block head %}
-    <link rel="stylesheet" href="{% static 'styles/template.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/profile.css' %}">
 {% endblock %}
 {% block content %}
 {% endblock %}
