about profile pictures

--- a/OnlyBooks/app/templates/app/about.html
+++ b/OnlyBooks/app/templates/app/about.html
@@ -8,6 +8,7 @@
         <div>
             <div class="big">D</div>
             <div>Dhruv Srivastava</div>
+            <img class="pfp" src="https://i.ibb.co/xswcrCt/Whats-App-Image-2024-10-06-at-14-35-07.jpg" width="128px">
             <div class="connections">
                 <a href="https://github.com/ChaoticNebula5" target="_blank">
                     <i class="iconoir-github"></i>
@@ -20,6 +21,7 @@
         <div>
             <div class="big">O</div>
             <div>Ojesh Srivastav</div>
+            <img class="pfp" src="https://i.ibb.co/tcckj08/Whats-App-Image-2024-10-06-at-15-10-59.jpg" width="128px">
             <div class="connections">
                 <a href="https://github.com/OJSri" target="_blank">
                     <i class="iconoir-github"></i>
@@ -32,6 +34,7 @@
         <div>
             <div class="big">R</div>
             <div>Rohit Singhal</div>
+            <img class = "pfp" src="https://i.ibb.co/Kbr6x27/IMG-2060-3.jpg" width="128px">
             <div class="connections">
                 <a href="https://github.com/rohiisinghal" target="_blank">
                     <i class="iconoir-github"></i>
@@ -44,6 +47,7 @@
         <div>
             <div class="big">A</div>
             <div>Aargh Rai</div>
+            <img class= "pfp" src="https://i.ibb.co/5kSJHQ7/me.jpg" width="128px">
             <div class="connections">
                 <a href="https://github.com/FloatingComet62" target="_blank">
                     <i class="iconoir-github"></i>
