about profile pictures

--- a/OnlyBooks/app/templates/app/about.html
+++ b/OnlyBooks/app/templates/app/about.html
@@ -36,7 +36,7 @@
             <div>Rohit Singhal</div>
             <img class = "pfp" src="https://i.ibb.co/Kbr6x27/IMG-2060-3.jpg" width="128px">
             <div class="connections">
-                <a href="https://github.com/rohiisinghal" target="_blank">
+                <a href="https://github.com/rohiitsinghal" target="_blank">
                     <i class="iconoir-github"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/rohit-singhal-580682267/" target="_blank">
