--- a/OnlyBooks/app/templates/app/book.html
+++ b/OnlyBooks/app/templates/app/book.html
@@ -4,4 +4,47 @@
     <link rel="stylesheet" href="{% static 'styles/book.css' %}">
 {% endblock %}
 {% block content %}
+    <div class="card">
+        <img src="{{ book.cover_link }}" alt="{{ book.title }}" />
+        <div class="info">
+            <div class="names">
+                <div class="title">{{ book.title }}</div>
+                <div class="author">by {{ book.author }}</div>
+            </div>
+            <div class="info_group">
+                <div class="label_group">
+                    <label for="pages" class="label">
+                        Pages
+                    </label>
+                    <div class="pages">{{ book.pages }}</div>
+                </div>
+                <div class="label_group">
+                    <label for="tags" class="label">
+                        Tags
+                    </label>
+                    <div class="tags">
+                        {% for tag in book.tags %}
+                            <div class="tag">{{ tag }}</div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="data_section">Reviews</div>
+    <div class="reviews">
+        {% for review in reviews %}
+            <a class="review" href="{{ review.user_link }}">
+                <div class="info">
+                    <div class="user_name">{{ review.username }}</div>
+                    <div class="rating">
+                        {% for _ in review.rating %}
+                            <i class="iconoir-star-solid"></i>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="message">{{ review.message }}</div>
+            </a>
+        {% endfor %}
+    </div>
 {% endblock %}
