--- a/OnlyBooks/app/templates/app/profile.html
+++ b/OnlyBooks/app/templates/app/profile.html
@@ -4,12 +4,26 @@
     <link rel="stylesheet" href="{% static 'styles/profile.css' %}">
 {% endblock %}
 {% block content %}
-    <div class="username">{{ username }}</div>
+    <div class="username">{{ user_data.name }}</div>
+    <h1 class="profile_section">Wishlisted Books</h1>
+    <div class="wishlist">
+        {% for book in user_data.wishlisted_books %}
+            <a class="book" href="/{{ book.link }}">
+                {{ book.name }}
+            </a>
+        {% endfor %}
+    </div>
+    <h1 class="profile_section">Reviews</h1>
     <div class="reviews">
         {% for review in reviews %}
             <a class="review" href="{{ review.book_link }}">
                 <div class="info">
-                    <div class="rating">{{ review.rating }}</div>
+                    <div class="book_name">{{ review.book_name }}</div>
+                    <div class="rating">
+                        {% for _ in review.rating %}
+                            <i class="iconoir-star-solid"></i>
+                        {% endfor %}
+                    </div>
                 </div>
                 <div class="message">{{ review.message }}</div>
             </a>
