--- a/OnlyBooks/static/styles/profile.css
+++ b/OnlyBooks/static/styles/profile.css
@@ -3,13 +3,15 @@
     color: white;
     text-align: center;
     margin-bottom: 5rem;
+    filter: drop-shadow(0 0 2rem #513C89);
+    font-weight: 800;
 }
 .reviews {
     display: flex;
     flex-direction: column;
     width: 50%;
-    gap: 1rem;
-    margin: auto;
+    gap: 2rem;
+    margin: auto auto 2rem;
 }
 .review {
     background-color: #e8bf99;
@@ -22,12 +24,41 @@
     transition: all ease-out 300ms;
     filter: drop-shadow(0 0 2rem #101010);
 }
-.info > .reviewer {
-
+.profile_section {
+    color: white;
+    text-align: center;
+    font-size: 2.8rem;
 }
-.info > .rating {
-
+.wishlist {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+.book {
+    font-size: 2rem;
+    background-color: #3b2e8e;
+    z-index: 20;
+    padding: 1rem 2rem;
+    border-radius: 0.85rem;
+}
+.book:hover {
+    background-color: #483d89;
+}
+.info {
+    display: flex;
+    justify-content: space-between;
+}
+.book_name {
+    font-weight: 700;
+}
+.review:hover {
+    background-color: #f4a261;
+    transform: scale(120%);
+}
+.info > .rating > * {
+    color: #3b2e8e;
 }
 .message {
-
+    font-size: 1.5rem;
 }
