--- a/OnlyBooks/app/templates/app/books.html
+++ b/OnlyBooks/app/templates/app/books.html
@@ -6,9 +6,33 @@
 {% block content %}
     <div class="books">
         {% for book in books %}
-            <div class="book">
-                <div class="name">{{ book.name }}</div>
-            </div>
+            <a class="book" href="{{ book.book_link }}">
+                <img src="{{ book.cover_link }}" alt="{{ book.title }}" />
+                <div class="info">
+                    <div class="names">
+                        <div class="title">{{ book.title }}</div>
+                        <div class="author">by {{ book.author }}</div>
+                    </div>
+                    <div class="info_group">
+                        <div class="label_group">
+                            <label for="pages" class="label">
+                                Pages
+                            </label>
+                            <div class="pages">{{ book.pages }}</div>
+                        </div>
+                        <div class="label_group">
+                            <label for="tags" class="label">
+                                Tags
+                            </label>
+                            <div class="tags">
+                                {% for tag in book.tags %}
+                                    <div class="tag">{{ tag }}</div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
         {% endfor %}
     </div>
 {% endblock %}
