--- a/OnlyBooks/static/styles/book.css
+++ b/OnlyBooks/static/styles/book.css
@@ -1,7 +1,8 @@
 .card {
     display: flex;
     gap: 1rem;
-    background-color: #555555;
+    background-color: #79535e;
+    filter: drop-shadow(0 0 0.5rem black);
     position: relative;
     z-index: 20;
     color: white;
