--- a/OnlyBooks/templates/main.html
+++ b/OnlyBooks/templates/main.html
@@ -56,7 +56,7 @@
                 {% endif %}
                 {% if page == 'landing-page' %}
                     <input aria-label="Search Term" type="text" placeholder="Search for books, authors, genres...">
-                    <button onclick="searchBooks()">Shop Now</button>
+                    <button onclick="searchBooks()">Search Now</button>
                 {% endif %}
             </div>
         </header>
