--- a/OnlyBooks/app/templates/app/landing_page.html
+++ b/OnlyBooks/app/templates/app/landing_page.html
@@ -14,27 +14,35 @@
         </div>
     </section>
 
-    <section id="recommendations" class="recommendations">
-        <h3>Books Just for You</h3>
-        <div class="book-container">
-            <div class="book">
-                <img src="book1.jpg" alt="Book 1">
-                <h4>Book Title 1</h4>
-                <p>Author 1</p>
-                <span>⭐⭐⭐⭐</span>
-            </div>
-            <div class="book">
-                <img src="book2.jpg" alt="Book 2">
-                <h4>Book Title 2</h4>
-                <p>Author 2</p>
-                <span>⭐⭐⭐⭐</span>
-            </div>
-            <div class="book">
-                <img src="book3.jpg" alt="Book 3">
-                <h4>Book Title 3</h4>
-                <p>Author 3</p>
-                <span>⭐⭐⭐⭐</span>
-            </div>
-        </div>
-    </section>
+<div class="books">
+{% for book in books %}
+            <a class="book" href="{{ book.book_link }}">
+                <img src="{{ book.cover_link }}" alt="{{ book.title }}" />
+                <div class="info">
+                    <div class="names">
+                        <div class="title">{{ book.title }}</div>
+                        <div class="author">by {{ book.author }}</div>
+                    </div>
+                    <div class="info_group">
+                        <div class="label_group">
+                            <label for="pages" class="label">
+                                Pages
+                            </label>
+                            <div class="pages">{{ book.pages }}</div>
+                        </div>
+                        <div class="label_group">
+                            <label for="tags" class="label">
+                                Tags
+                            </label>
+                            <div class="tags">
+                                {% for tag in book.tags %}
+                                    <div class="tag">{{ tag }}</div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+{% endfor %}
+    </div>
 {% endblock %}
