--- a/OnlyBooks/templates/main.html
+++ b/OnlyBooks/templates/main.html
@@ -15,14 +15,11 @@
     <!-- Modal for Login/Signup -->
     <div id="loginModal" class="modal">
         <div class="modal-content">
-{#            <div class="cross-padder">#}
-{#                <div></div>#}
-{#                <span class="iconoir-xmark" onclick="toggleModal()"></span>#}
-{#            </div>#}
-            <form id="loginForm">
+            <form id="loginForm" method="POST" action="{% url 'auth' %}">
+                {% csrf_token %}
                 <h2>Login</h2>
-                <input type="text" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
             </form>
             <p id="switch_login_form">Don't have an account? <a href="#" onclick="switchToSignup()">Sign Up</a></p>
@@ -39,7 +36,14 @@
                     <li><a href="{% url 'landing-page' %}#recommendations">Recommendations</a></li>
                     <li><a href="{% url 'about' %}">About Us</a></li>
                 </ul>
-                <button class="login-btn" onclick="toggleModal()">Login / Sign Up</button>
+                <div>
+                {% if not request.user.is_authenticated %}
+                    <button class="login-btn" onclick="toggleModal()">Login / Sign Up</button>
+                {% else %}
+                    <a href="/profile/0" class="login-btn">Profile</a>
+                    <a href="/logout" class="login-btn">Logout</a>
+                {% endif %}
+                </div>
             </nav>
             <div class="hero">
                 <h2>
