--- a/OnlyBooks/static/styles/events.css
+++ b/OnlyBooks/static/styles/events.css
@@ -14,6 +14,7 @@
     border-radius: 1rem;
     transition: all ease-out 300ms;
     filter: drop-shadow(10px 10px 10rem #202020);
+    width: 55%;
 }
 .event:hover {
     background-color: #f4a261;
